Fixed responsive layout bugs

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,10 +92,11 @@
 
 .layout {
     display: grid;
-    margin: 5rem;
+    margin: 5rem 3rem;
     gap: 1rem;
+    column-gap: 3rem;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 50px auto;
+    grid-template-rows: 50px 20rem 2fr;
 }
 
 .layout h1 {
@@ -105,13 +106,14 @@
 }
 
 .layout #products-section {
+    justify-self: end;
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 2 / 4;
 }
 
 .layout #atc-section {
     grid-column: 3 / 4;
-    grid-row: 1;
+    grid-row: 1 / 3;
 }
 
 /* ==================================== */
@@ -122,8 +124,8 @@
     padding: 1rem;
     inline-size: 100%;
     grid-template-columns: 
-        repeat(var(--repeat, auto-fit), minmax(200px, 1fr));
-    column-gap: 3rem;
+        repeat(var(--repeat, auto-fit), minmax(175px, 1fr));
+    column-gap: 2rem;
 }
 
 .product-card {
@@ -146,7 +148,7 @@
     border: 1px solid hsl(var(--rose-900));
 }
 
-.product-content > * {
+.product-content > *:not(.product-name) {
     width: max-content;
 }
 
@@ -170,20 +172,21 @@
 
 #atc-section {
     inline-size: 100%;
-    height: min-content;
     padding: 3rem 2rem 3rem;
     border-radius: 1em;
 }
 
 #cart-list {
-    
+    row-gap: 3rem;
 }
 
-#atc-section h3 {
-    /* padding: 1rem 2rem; */
+#cart-list h3 {
+    justify-self: flex-start;
 }
 
 .attribution {
+    /* position: absolute; */
+    bottom: 0;
     font-size: 11px; text-align: center;
 }
 .attribution a { color: hsl(228, 45%, 44%); }
@@ -191,8 +194,9 @@
 /* Handling Sizing For Smaller Viewports */
 @media (max-width: 1024px) {
     .layout {
+        margin: 2rem;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 50px auto auto;
+        grid-template-rows: 50px 1fr 30rem;
     }
 
     .layout h1 {
@@ -207,7 +211,11 @@
 
     .layout #atc-section {
         grid-column: span 2;
-        grid-row: 3;
+        grid-row: 4;
+    }
+
+    #product-grid {
+        column-gap: 1rem;
     }
 
 }
